Intro, logbook tips & problems, search
preparation for algolia search

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,30 +5,141 @@
  */
 
 /* You can override the default Infima variables here. */
-/* :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+:root {
+  /* --ifm-color-primary: hsl(147, 49%, 35%);
+  --ifm-color-primary-dark: hsl(147, 49%, 32%);
+  --ifm-color-primary-darker: hsl(147, 49%, 30%);
+  --ifm-color-primary-darkest: hsl(147, 49%, 25%);
+  --ifm-color-primary-light: hsl(147, 48%, 39%);
+  --ifm-color-primary-lighter: hsl(147, 49%, 40%);
+  --ifm-color-primary-lightest: hsl(147, 48%, 46%); */
+
+  --ifm-color-primary-hue: 241;
+  --ifm-color-primary-saturation: 83%;
+  --ifm-color-primary-lightness: 42%;
+  --ifm-color-primary-step: 3%;
+  --ifm-color-primary: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    var(--ifm-color-primary-lightness)
+  );
+  --ifm-color-primary-dark: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) - calc(--ifm-color-primary-step * 1)
+    )
+  );
+  --ifm-color-primary-darker: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) - calc(--ifm-color-primary-step * 2)
+    )
+  );
+  --ifm-color-primary-darkest: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) - calc(--ifm-color-primary-step * 3)
+    )
+  );
+  --ifm-color-primary-light: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) + calc(--ifm-color-primary-step * 1)
+    )
+  );
+  --ifm-color-primary-lighter: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) + calc(--ifm-color-primary-step * 2)
+    )
+  );
+  --ifm-color-primary-lightest: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) + calc(--ifm-color-primary-step * 3)
+    )
+  );
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-} */
+
+  --ifm-alert-border-left-width: 3px;
+}
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-/* [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+[data-theme="dark"] {
+  /* --ifm-color-primary: hsl(167, 68%, 45%);
+  --ifm-color-primary-dark: hsl(167, 68%, 41%);
+  --ifm-color-primary-darker: hsl(167, 68%, 38%);
+  --ifm-color-primary-darkest: hsl(167, 68%, 32%);
+  --ifm-color-primary-light: hsl(167, 68%, 50%);
+  --ifm-color-primary-lighter: hsl(167, 68%, 52%);
+  --ifm-color-primary-lightest: hsl(167, 68%, 59%); */
+
+  --ifm-color-primary-hue: 241;
+  --ifm-color-primary-saturation: 63%;
+  --ifm-color-primary-lightness: 59%;
+  --ifm-color-primary-step: 3%;
+  --ifm-color-primary: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    var(--ifm-color-primary-lightness)
+  );
+  --ifm-color-primary-dark: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) - calc(--ifm-color-primary-step * 1)
+    )
+  );
+  --ifm-color-primary-darker: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) - calc(--ifm-color-primary-step * 2)
+    )
+  );
+  --ifm-color-primary-darkest: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) - calc(--ifm-color-primary-step * 3)
+    )
+  );
+  --ifm-color-primary-light: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) + calc(--ifm-color-primary-step * 1)
+    )
+  );
+  --ifm-color-primary-lighter: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) + calc(--ifm-color-primary-step * 2)
+    )
+  );
+  --ifm-color-primary-lightest: hsl(
+    var(--ifm-color-primary-hue),
+    var(--ifm-color-primary-saturation),
+    calc(
+      var(--ifm-color-primary-lightness) + calc(--ifm-color-primary-step * 3)
+    )
+  );
+
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-} */
+}
 
 .card:hover {
   text-decoration: none;
+}
+
+.admonition h5 {
+  text-transform: none;
 }
